# app/docs/swagger.json
@@ -4,6 +4,46 @@
         "contact": {}
     },
     "paths": {
+        "/admin/user/list": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "admin"
+                ],
+                "summary": "用户列表",
+                "parameters": [
+                    {
+                        "description": "用户登录",
+                        "name": "ListUserReq",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/admin.ListUserReq"
+                        }
+                    },
+                    {
+                        "type": "string",
+                        "description": "请求ID",
+                        "name": "request_id",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "登录成功",
+                        "schema": {
+                            "$ref": "#/definitions/admin.ListUserResp"
+                        }
+                    }
+                }
+            }
+        },
         "/app/test": {
             "get": {
                 "consumes": [
@@ -108,6 +148,12 @@
         }
     },
     "definitions": {
+        "admin.ListUserReq": {
+            "type": "object"
+        },
+        "admin.ListUserResp": {
+            "type": "object"
+        },
         "user.GetUserInfoReq": {
             "type": "object"
         },
