# app/request/admin/amdin_user.go
@@ -1,0 +1,3 @@
+package admin
+
+type ListUserReq struct{}
