# app/response/admin/admin_user.go
@@ -1,0 +1,3 @@
+package admin
+
+type ListUserResp struct{}
